# pico_trinamic

./: .gitmodules  CMakeLists.txt  README.md  tmc_uart.c  tmc_uart.h  trinamic.h
example/: CMakeLists.txt  example.c
